--- a/assets/style.css
+++ b/assets/style.css
@@ -218,7 +218,6 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -1;
     object-fit: cover;
     object-position: center;
 }
@@ -234,12 +233,11 @@ header {
 }
 
 #banner .arrow_left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     left: 10px;
-    width: 100px;
-    height: 100px;
+    top: 45%;
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
 }
 
 .arrow>img {
