--- a/assets/style.css
+++ b/assets/style.css
@@ -289,6 +289,7 @@ header {
     color: white;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
+    z-index: 9999;
 }
 
 #banner span {
